sources = [
  'package.json',
  'package-lock.json',
  'index.html',
  'tsconfig.json',
  'tsconfig.app.json',
  'tsconfig.node.json',
  'vite.config.ts',
  'public' / 'favicon.ico',
  'src' / 'AddTargetsDialog.css',
  'src' / 'AddTargetsDialog.tsx',
  'src' / 'App.css',
  'src' / 'App.tsx',
  'src' / 'DisassemblyView.css',
  'src' / 'DisassemblyView.tsx',
  'src' / 'EventView.css',
  'src' / 'EventView.tsx',
  'src' / 'HandlerEditor.tsx',
  'src' / 'HandlerList.css',
  'src' / 'HandlerList.tsx',
  'src' / 'MemoryView.css',
  'src' / 'MemoryView.tsx',
  'src' / 'index.css',
  'src' / 'main.tsx',
  'src' / 'model.ts',
  'src' / 'vite-env.d.ts',
]

custom_target('tracer-app',
  input: sources,
  output: ['tracer_ui.zip'],
  command: [
    build_app,
    '@INPUT@',
    '@OUTPUT0@',
    '@PRIVATE_DIR@',
  ],
  install: true,
  install_dir: python.get_install_dir() / 'frida_tools' / 'tracer_ui',
)
